# schemafy

./: .gitignore  Cargo.toml
schemafy_core/: Cargo.toml
schemafy_core/src/: lib.rs  mapping.rs  yaml_value.rs
schemafy_lib/: Cargo.toml
schemafy_lib/src/: generator.rs  lib.rs  schema.rs
schemafy_lib/tests/: test.rs
src/: converter.rs  lib.rs
tests/: json_schema_test_suite.rs  test.rs
