[package]
name = "schemafy_core"
version = "0.6.3" # VERSION_TAG
authors = ["Markus Westerlind <marwes91@gmail.com>"]
edition = "2018"

description = "Generates serializeable Rust types from a json schema"
license = "MIT"

repository = "https://github.com/Marwes/schemafy"
documentation = "https://docs.rs/schemafy"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.8.26"
num-traits = "0.2.15"
indexmap = "1.9.3"